[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/start_background.png" type="Texture" id=2]
[ext_resource path="res://entities/GUI/StartScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Pixeboy-z8XGD.tres" type="DynamicFont" id=4]

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.207843 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Menu" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -30.0
margin_right = 80.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Local" type="Tabs" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 26.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/Local"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Local" type="Button" parent="Menu/Local/CenterContainer"]
margin_left = 38.0
margin_top = 15.0
margin_right = 113.0
margin_bottom = 35.0
text = "Play Local"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Online" type="Tabs" parent="Menu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 26.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Online"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Online/VBoxContainer"]
margin_right = 152.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Nickname" type="LineEdit" parent="Menu/Online/VBoxContainer/HBoxContainer"]
margin_right = 98.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Nickname"

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Online/VBoxContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 152.0
margin_bottom = 24.0

[node name="Control" type="Control" parent="Menu/Online/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 50.0
size_flags_vertical = 3

[node name="BETA" type="RichTextLabel" parent="Menu/Online/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 50.0
margin_bottom = 19.0
rect_min_size = Vector2( 50, 15 )
rect_clip_content = false
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "[center][rainbow freq=0.2 sat=10 val=20]BETA[/rainbow][/center]"
text = "BETA"
scroll_active = false

[node name="Control2" type="Control" parent="Menu/Online/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 50.0
margin_bottom = 24.0
size_flags_vertical = 3

[node name="Online" type="Button" parent="Menu/Online/VBoxContainer"]
margin_top = 28.0
margin_right = 152.0
margin_bottom = 48.0
text = "Play online"

[connection signal="button_up" from="Menu/Local/CenterContainer/Local" to="." method="_on_Local_button_up"]
[connection signal="text_changed" from="Menu/Online/VBoxContainer/HBoxContainer/Nickname" to="." method="_on_Nickname_text_changed"]
[connection signal="button_up" from="Menu/Online/VBoxContainer/Online" to="." method="_on_Online_button_up"]
